--- a/ClinicMobile/app/src/main/res/values/strings.xml
+++ b/ClinicMobile/app/src/main/res/values/strings.xml
@@ -1,16 +1,26 @@
 <resources>
+    <string name="add">Add</string>
+    <string name="add_alert">What do you want to add?</string>
+    <string name="add_permissions">Add Permissions</string>
+    <string name="add_roles">Add Role</string>
+    <string name="add_rooms">Add Room</string>
+    <string name="add_users">Add User</string>
     <string name="app_name">MSA Dentistry Clinic</string>
     <string name="cancel">Cancel</string>
+    <string name="capacity">Capacity</string>
     <string name="change_language">Change your language:</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="contact_admin">Contact the Admin</string>
+    <string name="department">Department</string>
     <string name="edit">Edit</string>
-    <string name="edit_alert">What do you want to edit?</string>
     <string name="email">E-mail</string>
     <string name="employees">Employees</string>
     <string name="fail">Failed</string>
+    <string name="floor">Floor</string>
     <string name="forget">Forget Your Password?</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
+    <string name="id">ID</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="logout_alert">Are you sure you want to logout?</string>
@@ -18,11 +28,15 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="password">Password</string>
     <string name="permission">Users Permissions</string>
+    <string name="permission_link">Permission Link</string>
     <string name="permission_links">Permissions</string>
+    <string name="permission_name">Permission Name</string>
     <string name="requests">Requests</string>
     <string name="required">Required Field</string>
-    <string name="role">Users Roles</string>
+    <string name="role">Roles</string>
+    <string name="role_name">Role Name</string>
     <string name="rooms">Rooms</string>
+    <string name="room_name">Room Name</string>
     <string name="search">Search</string>
     <string name="search_alert">What do you want to search?</string>
     <string name="settings">Settings</string>
